Improve UI layout, add logging callback, and enable preset import

--- a/obs_scheduler_config.example.json
+++ b/obs_scheduler_config.example.json
@@ -1,19 +1,7 @@
 {
     "host": "localhost",
     "port": "4455",
-    "password": "YOUR_PASSWORD_HERE",
+    "password": "BD8DyVeC0JdPWlj2",
     "auto_connect": true,
-    "tasks": [],
-    "presets": {
-        "Example Preset": [
-            {
-                "time": "10:00",
-                "action": "Start Streaming",
-                "type": "weekly",
-                "days": [
-                    "Mon"
-                ]
-            }
-        ]
-    }
+    "tasks": []
 }
